fix issue width on mobile; add waiting message before start, hide council/district buttons, add name flags to main screen; fewer protests/rebellions, lower issue limit, longer timeouts; more starting treasury

--- a/game/stylesheet.css
+++ b/game/stylesheet.css
@@ -27,8 +27,18 @@
 			top: 50%;
 			left: 50%;
 			transform: translateX(-50%) translateY(-50%);
+			text-align: center;
+		}
+
+		#background-id {
 			font-size: 100px;
 			color: var(--black-4);
+			margin-bottom: 10px;
+		}
+
+		#background-message {
+			font-size: 20px;
+			color: var(--black-2);
 		}
 
 		#container[gameplay] #background {
@@ -89,6 +99,14 @@
 
 		#select-district span {
 			left: 50%;
+		}
+
+		#mode-bar:not([showCouncil]) #select-council {
+			display: none;
+		}
+
+		#mode-bar:not([showDistrict]) #select-district {
+			display: none;
 		}
 
 		#mode-bar div[selected] span {
@@ -191,6 +209,61 @@
 		border-radius: var(--borderRadius);
 		box-shadow: 0px 0px 20px var(--black-4);
 	}
+
+	/* name flags */
+		#flags-background {
+			position: absolute;
+			top: 0px;
+			left: 0px;
+			width: 100%;
+			height: 100%;
+			pointer-events: none;
+			z-index: -1;
+			filter: blur(1.5px);
+		}
+
+		#flags-background .flag-outer {
+			position: absolute;
+			width: 150px;
+			height: 100px;
+			background-color: var(--black-4);
+			border-radius: 0px var(--borderRadius) var(--borderRadius) 0px;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			user-select: none;
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-o-user-select: none;
+			cursor: default;
+			opacity: 0;
+			animation: fadein 2s;
+		}
+
+		#flags-background .flag-text {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translateX(-50%) translateY(-50%);
+			text-align: center;
+			color: var(--white-4);
+			font-size: 30px;
+		}
+
+		#flags-background .flag-pole {
+			position: absolute;
+			left: -10px;
+			top: -5px;
+			width: 10px;
+			border-radius: 5px;
+			background-color: var(--black-4);
+			height: 150vh;
+			box-shadow: 0px 0px 10px var(--black-4);
+		}
+
+		@keyframes fadein {
+			0% { opacity: 0; }
+			100% { opacity: 1; }
+		}
 
 /*** observer - columns ***/
 	#column-left {
@@ -604,8 +677,8 @@
 	#issues {
 		float: left;
 		height: calc(100vh - 250px);
-		padding: 20px 20px 80px 20px;
-		width: calc(100% - 40px);
+		padding: 20px 30px 80px 30px;
+		width: calc(100% - 60px);
 		margin-top: 150px;
 		user-select: none;
 		-moz-user-select: none;
@@ -621,8 +694,8 @@
 
 	.issue {
 		float: left;
-		width: calc(100% - 20px);
-		padding: 10px;
+		width: calc(100% - 40px);
+		padding: 20px;
 		background-color: var(--black-0);
 		border-radius: var(--borderRadius);
 		margin-bottom: 20px;
