--- a/home/stylesheet.css
+++ b/home/stylesheet.css
@@ -33,8 +33,8 @@
 		}
 
 		#title {
-			height: 40vh;
-			width: 60vh;
+			height: 36vh;
+			width: 54vh;
 			background-color: var(--cerulean-3);
 			user-select: none;
 			cursor: pointer;
